--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <div class="project-card video-card">
             <div class="project-content">
                 <h2>Video Creation</h2>
-                <p><b>This is an introduction video witch was created for a virtual zoo project</b></p>
+                <p><b>This is an introduction video which was created for a virtual zoo project</b></p>
             </div>
             <video controls>
                 <source src="others/video.mp4" type="video/mp4">
