--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <div class="project-container">
         <div class="project-card">
             <h2>Logo Designing</h2>
-            <p><b>This logo was created for  a new language learning application</b></p>
+            <p><b>This logo was created for  a new language learning application.</b></p>
             <img src="others/logo.png" alt="Project 1">
            
         </div>
@@ -28,7 +28,7 @@
 
         <div class="project-card">
             <h2>Animations</h2>
-            <p><b>This Animation box was used as a brackground theme of a cricket web site</b></p>
+            <p><b>This Animation box was used as a brackground theme of a cricket web site.</b></p>
             <div class="animation-box">
                 <div class="animation-images">
                     <img src="https://imgur.com/23l87rd.jpeg" alt="Image 1">
@@ -43,7 +43,7 @@
         <div class="project-card video-card">
             <div class="project-content">
                 <h2>Video Creation</h2>
-                <p><b>This is an introduction video which was created for a virtual zoo project</b></p>
+                <p><b>This is an introduction video which was created for a virtual zoo project.</b></p>
             </div>
             <video controls>
                 <source src="others/video.mp4" type="video/mp4">
